[gd_scene load_steps=6 format=4 uid="uid://d13bbobip6h1v"]

[ext_resource type="Script" path="res://stages/space_station_a/space_station_a.gd" id="1_8sevi"]
[ext_resource type="Texture2D" uid="uid://s3rif3yr04wc" path="res://assets/Foozle_2DS0015_Void_EnvironmentPack/Backgrounds/PNGs/Condesed/Starry background  - Layer 02 - Stars.png" id="3_aq8ly"]
[ext_resource type="TileSet" uid="uid://cg545tfxy6y6j" path="res://resources/tilesets/space_objects_32x32.tres" id="3_k03up"]
[ext_resource type="PackedScene" uid="uid://bdpfa76v2eoi7" path="res://interactables/shop_interactable.tscn" id="4_ic6lf"]

[sub_resource type="AtlasTexture" id="AtlasTexture_n1m0u"]
atlas = ExtResource("3_aq8ly")
region = Rect2(0, 0, 640, 360)

[node name="SpaceStationA" type="Node2D" node_paths=PackedStringArray("_shop")]
script = ExtResource("1_8sevi")
_shop = NodePath("ShopInteractable")
id = "space_station_a"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_n1m0u")

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD6//3/AAACAAQAAAD6//7/AAACAAUAAAD7//3/AAADAAQAAAD7//7/AAADAAUAAAAMAAgAAAAIAAAAAAAMAAkAAAAIAAEAAAAMAAoAAAAIAAIAAAANAAgAAAAJAAAAAAANAAkAAAAJAAEAAAANAAoAAAAJAAIAAAAOAAgAAAAKAAAAAAAOAAkAAAAKAAEAAAAOAAoAAAAKAAIAAAAPAAgAAAALAAAAAAAPAAkAAAALAAEAAAAPAAoAAAALAAIAAAAGAB0AAAAGAAAAAAAGAB4AAAAGAAEAAAAHAB0AAAAHAAAAAAAHAB4AAAAHAAEAAABNAAwAAAACAAAAAABNAA0AAAACAAEAAABOAAwAAAADAAAAAABOAA0AAAADAAEAAAAjAP//AAAIAAMAAAAjAAAAAAAIAAQAAAAjAAEAAAAIAAUAAAAjAAIAAAAIAAYAAAAkAP//AAAJAAMAAAAkAAAAAAAJAAQAAAAkAAEAAAAJAAUAAAAkAAIAAAAJAAYAAAAlAP//AAAKAAMAAAAlAAAAAAAKAAQAAAAlAAEAAAAKAAUAAAAlAAIAAAAKAAYAAAAmAP//AAALAAMAAAAmAAAAAAALAAQAAAAmAAEAAAALAAUAAAAmAAIAAAALAAYAAAAPAAUAAAAIAAcAAAAQAAUAAAAJAAcAAAARAAUAAAAKAAcAAAASAAUAAAALAAcAAAANAAsAAAAIAAcAADAMAAsAAAAJAAcAADALAAsAAAAKAAcAADAKAAsAAAALAAcAADAKAAkAAAAHAAcAAAAQAAcAAAAFAAcAAAAQAAoAAAAHAAcAAAAQAAwAAAAHAAcAAAAJAAoAAAAHAAcAAAANAAUAAAAHAAcAAAAMAAcAAAAHAAcAAAAFAAsAAAAHAAcAAAALAAcAAAAGAAcAAAAUAAoAAAAGAAcAAAAOAAwAAAAGAAcAAAAGABAAAAAGAAcAAAAIAAsAAAAGAAcAAAAPAA0AAAAFAAcAAAALAAkAAAAGAAcAAAAHAAwAAAAFAAcAAAARAAkAAAAFAAcAAAALAAYAAAAFAAcAAAAKAA0AAAAFAAcAAAAQAAsAAAAFAAcAAAAQABAAAAAFAAcAAAAZAAkAAAAFAAcAAAABAAsAAAAFAAcAAAAPAAMAAAAFAAcAAAAhAAQAAAAFAAcAAAAdAAEAAAAGAAcAAAAtAAUAAAAGAAcAAAAfAP//AAAGAAcAAAAiAAEAAAAGAAcAAAAgAAEAAAAGAAcAAAAhAAAAAAAGAAcAAAAvAP7/AAAGAAcAAAAkAPz/AAAGAAcAAAArAAIAAAAGAAcAAAD8/wIAAAAGAAcAAAD3/wcAAAAGAAcAAAD2/wYAAAAGAAcAAADz/wAAAAAGAAcAAAATAPz/AAAGAAcAAAATAPv/AAAGAAcAAAAUAPv/AAAGAAcAAAD1/wIAAAAHAAcAAADi/wgAAAAHAAcAAAABAAQAAAAHAAcAAAD2/wIAAAAHAAcAAAAEAPn/AAAHAAcAAADx//n/AAAHAAcAAAAMAAMAAAAHAAcAAAD9/w0AAAAHAAcAAAD+/w0AAAAHAAcAAAANAPr/AAAHAAcAAAD8/w0AAAAHAAcAAAAbABoAAAAHAAcAAAAaABoAAAAHAAcAAAABABkAAAAHAAcAAAACABkAAAADAAcAAAAOABYAAAAHAAcAAAAMABIAAAAHAAcAAAAMABMAAAAHAAcAAAALABQAAAAHAAcAAADx/xkAAAAHAAcAAAAZAB8AAAAHAAcAAAD9/x0AAAAHAAcAAAD6/yQAAAAFAAcAAAD7/yQAAAAFAAcAAAD0/xUAAAAFAAcAAAAZABoAAAAFAAcAAADW/w4AAAAFAAcAAAAtABkAAAAFAAcAAAAVAA4AAAAFAAcAAAAMABgAAAAFAAcAAAAEABkAAAAFAAcAAAD//xwAAAAFAAcAAADe/wQAAAAFAAcAAADd/wQAAAAFAAcAAADc/wQAAAAFAAcAAAAPAAIAAAAFAAcAAAAAABgAAAADAAcAAAASABwAAAADAAcAAAAFABcAAAADAAcAAAAAABYAAAADAAcAAAD9/yAAAAAEAAcAAAAEABsAAAADAAcAAAD9/xwAAAADAAcAAAAYACMAAAADAAcAAAABABsAAAAEAAcAAAD+/xoAAAAEAAcAAAALABsAAAAEAAcAAAABACQAAAAEAAcAAAARACcAAAAEAAcAAAAKACEAAAAEAAcAAAASAB0AAAAEAAcAAAANABwAAAAEAAcAAAAWAB0AAAAEAAcAAAAVAB0AAAAEAAcAAAAbABcAAAAEAAcAAAAJABUAAAAEAAcAAAD1/yAAAAABAAcAAAD2/yAAAAACAAcAAAAWACcAAAABAAcAAAAXACcAAAACAAcAAAD7/y8AAAABAAcAAAD8/y8AAAACAAcAAAAUACMAAAAAAAcAAAAVABgAAAAAAAcAAAD4/xwAAAAAAAcAAAD4/xAAAAAEAAcAAADu/x4AAAAEAAcAAAD5/xoAAAAEAAcAAAD4/xoAAAAEAAcAAAD2/xsAAAAEAAcAAADq/yIAAAAEAAcAAAD5/yUAAAAEAAcAAAD6/yUAAAAEAAcAAAALACkAAAAEAAcAAAABACcAAAAEAAcAAAALACUAAAAEAAcAAAAJACUAAAAEAAcAAAD3/ysAAAAEAAcAAAAKACQAAAADAAcAAAADACgAAAADAAcAAAADAP//AAAFAAcAAAAAAAQAAAAFAAcAAAABAAIAAAAFAAcAAAASAP//AAAFAAcAAAABAAEAAAAHAAcAAAD3/wMAAAAHAAcAAAAHAPT/AAAHAAcAAAD3//j/AAAHAAcAAAD3//f/AAAHAAcAAAD4//f/AAAHAAcAAAA=")
tile_set = ExtResource("3_k03up")
rendering_quadrant_size = 32

[node name="ShopInteractable" parent="." instance=ExtResource("4_ic6lf")]
position = Vector2(-66, -109)

[connection signal="buy" from="ShopInteractable" to="." method="_on_buy"]
[connection signal="inventory_count_request" from="ShopInteractable" to="." method="_on_inventory_count_request"]
[connection signal="sell" from="ShopInteractable" to="." method="_on_sell"]
